--- a/WebApplication1/Views/Movies/Delete.cshtml
+++ b/WebApplication1/Views/Movies/Delete.cshtml
@@ -5,6 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+
+    body {
+        background-color: #0f0f0f;
+        color: #f2efda;
+    }
+
+
+
+
+</style>
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this movie?</h3>
