--- a/WebApplication1/Views/Movies/Index.cshtml
+++ b/WebApplication1/Views/Movies/Index.cshtml
@@ -65,6 +65,7 @@
                     <p><strong>Genre:</strong> @movie.Genre</p>
                     <p>@movie.Info</p>
                     <a asp-action="Delete" asp-route-id="@movie.Id">Delete</a>
+                    <a asp-action="Details" asp-route-id="@movie.Id">Details</a>
                 </div>
             </div>
         }
