--- a/WebApplication1/Views/Movies/Index.cshtml
+++ b/WebApplication1/Views/Movies/Index.cshtml
@@ -64,7 +64,9 @@
                     <p><strong>Director:</strong> @movie.Director</p>
                     <p><strong>Genre:</strong> @movie.Genre</p>   
                     <a asp-action="Delete" asp-route-id="@movie.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@movie.Id">Edit</a>
                     <a asp-action="Details" asp-route-id="@movie.Id">Details</a>
+
                 </div>
             </div>
         }
