--- a/WebApplication1/Views/Movies/Create.cshtml
+++ b/WebApplication1/Views/Movies/Create.cshtml
@@ -5,6 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+
+    body {
+        background-color: #0f0f0f;
+        color: #f2efda;
+    }
+
+</style>
+
 <h1>Create</h1>
 <hr />
 <div class="row">
